# imp-semantics

./: .cruft.json  .dockerignore  .gitignore  Makefile  README.md  doit  flake.nix  pyproject.toml
.github/actions/with-docker/: Dockerfile  action.yml
.github/workflows/: test-pr.yml  update-version.yml
docker/: Dockerfile  Dockerfile.k+pyk
examples/: dangling-else.imp  gcd-while.imp  gcd.imp  sumrec10.imp  sumto10.imp  while-and-following.imp
examples/expressions/: evaluate-me  pathological
examples/specs/: imp-assign-spec.k  imp-countdown-spec.k  imp-ifs-spec.k  imp-simple-spec.k  imp-sum-spec.k  my-spec.k
examples/variables/: evaluate-me
kimp/: .cruft.json  Makefile  README.md  flake.nix  kbuild.toml  pyproject.toml
kimp/k-src/: calls.k  expressions.k  imp-verification.k  notes.org  statements.k  variables.k
kimp/src/kimp/: __main__.py  kimp.py
kimp/src/kimp/kdist/: plugin.py
kimp/src/kimp/kdist/imp-semantics/: statements.k
kimp/tests/specs/: imp-simple-spec.k  imp-sum-spec.k
nix/: README.md
nix/kimp/: default.nix
nix/kimp-pyk/: build-systems-overlay.nix  default.nix
nix/kimp-pyk-pyproject/: default.nix
nix/kimp-source/: default.nix
package/: Dockerfile  smoke-test.sh
src/kimp/: __init__.py  __main__.py  kimp.py
src/kimp/kdist/: plugin.py
src/kimp/kdist/imp-semantics/: calc.k  expr.k  expressions.k  imp-verification.k  imp.k  statements.k
src/tests/integration/: test_expr.py  test_imp.py
